--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "akar-icons": "^1.9.30",
-    "geist": "^1.0.0",
+    "geist": "^1.2.0",
     "next": "14.0.1",
     "react": "^18",
     "react-dom": "^18"
@@ -22,7 +22,7 @@
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "postcss": "^8",
-    "tailwindcss": "^3.3.0",
+    "tailwindcss": "latest",
     "eslint": "^8",
     "eslint-config-next": "14.0.1"
   }
