--- a/package.json
+++ b/package.json
@@ -10,20 +10,23 @@
   },
   "dependencies": {
     "akar-icons": "^1.9.30",
+    "clsx": "^2.1.0",
+    "framer-motion": "^11.0.6",
     "geist": "^1.2.0",
-    "next": "14.0.1",
+    "next": "14.0.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "tailwind-merge": "^2.2.1"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.0.1",
     "postcss": "^8",
     "tailwindcss": "latest",
-    "eslint": "^8",
-    "eslint-config-next": "14.0.1"
+    "typescript": "^5"
   }
 }
